OO-5151: course tools for BigBlueButton and Teams